fix overflow-y on root

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,6 @@
+:root {
+	overflow-y: auto;
+}
 body {
 	color: #222;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
